--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "type": "module",
   "dependencies": {
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "workbox-window": "^7.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.1",
     "prettier": "^3.6.2",
-    "vite": "^7.2.2"
+    "vite": "^7.2.2",
+    "vite-plugin-pwa": "^1.1.0"
   }
 }
