--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "tone": "^15.1.22",
     "workbox-window": "^7.4.0"
   },
   "devDependencies": {
