--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "playright": "^0.0.22",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tone": "^15.1.22",
