--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "playright": "^0.0.22",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tone": "^15.1.22",
@@ -39,6 +38,7 @@
     "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.1",
     "fake-indexeddb": "^6.2.5",
+    "meyda": "^5.6.3",
     "prettier": "^3.6.2",
     "typescript": "^5.9.3",
     "vite": "^7.2.2",
